--- a/Config/template/index.html
+++ b/Config/template/index.html
@@ -7,7 +7,7 @@
 
 
 
-        <link rel="stylesheet" type="text/css" href="image_files/reset-min.css">
+        <link rel="stylesheet" type="text/css" href="./image/reset-min.css">
 
         <!--[if lte IE 7]>
 
@@ -15,9 +15,9 @@
 
         <![endif]-->
 
-        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="image_files/mockup_mobile.css">
+        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./image/mockup_mobile.css">
 
-        <link href="image_files/common.css" rel="stylesheet" type="text/css">
+        <link href="./image/common.css" rel="stylesheet" type="text/css">
 
 
 
@@ -25,7 +25,7 @@
 
 
 
-    <script type="text/javascript" async="" src="image_files/ga.js"></script><script type="text/javascript">
+    <script type="text/javascript" async="" src="./image/ga.js"></script><script type="text/javascript">
 
 
 
@@ -86,7 +86,7 @@
 
   <div id="header">
 
-    <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img src="image_files/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452" height="112"></a> </h1>
+    <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img src="./image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452" height="112"></a> </h1>
 
     <div id="right">
 
@@ -223,12 +223,12 @@
  <div id="banner_zone">
 
 <div id="banner_hikikomori">
-<a href="http://cscnara.ksaka.net/kazokukai.html" target="_parent"><img src="image_files/kazokunokaibanner.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-<a href="http://cscnara.ksaka.net/honninkai.html" target="_parent"><img src="image_files/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
+<a href="http://cscnara.ksaka.net/kazokukai.html" target="_parent"><img src="./image/kazokunokaibanner.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
+<a href="http://cscnara.ksaka.net/honninkai.html" target="_parent"><img src="./image/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
 </div>
 
 
-<p id="banner_chukan"><!--<img src="images/290728.png" width="100%">--><a href="http://cscnara.ksaka.net/chukansyurou.html" target="_parent"><img src="image_files/banner_chukan.png" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>
+<p id="banner_chukan"><!--<img src="images/290728.png" width="100%">--><a href="http://cscnara.ksaka.net/chukansyurou.html" target="_parent"><img src="./image/banner_chukan.png" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>
 
 
 <p id="banner_jiritu"><!--子供の自立 パンフレット-->
@@ -242,10 +242,10 @@
 
 
 <div class="bannerbox">
-<p><a href="http://workwaku.ksaka.net/" target="_top"><img src="image_files/workwaku.png" alt=""></a></p>
+<p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./image/workwaku.png" alt=""></a></p>
 </div>
  <div class="bannerbox">
- <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="image_files/pgschool.png" alt=""></a></p>
+ <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./image/pgschool.png" alt=""></a></p>
 </div>
 
 <div id="whatsnew">
@@ -276,7 +276,7 @@
 
   <ul id="csschool">
 
-    <li id="title2"><img src="image_files/side_title.jpg" alt="CSスクール" width="240" height="109"></li>
+    <li id="title2"><img src="./image/side_title.jpg" alt="CSスクール" width="240" height="109"></li>
 
     <li><a href="http://cscnara.ksaka.net/school.html" target="_parent">本部・橿原新ノ口校</a></li>
 
@@ -292,7 +292,7 @@
 
    相談はこちらへ</p>
 
- <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img src="image_files/banner_computer.gif" alt="パソコンなら青年お助け隊" width="141" height="136"></a>
+ <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img src="./image/banner_computer.gif" alt="パソコンなら青年お助け隊" width="141" height="136"></a>
 
  </div>
 
@@ -307,7 +307,7 @@
 
     <ul>
 
-      <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img src="image_files/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129" height="42"><br>
+      <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img src="./image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129" height="42"><br>
 
       奈良県青少年・生涯学習課</a></li>
 
@@ -315,7 +315,7 @@
 
 
 
-       <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img src="image_files/banner_supportstation.jpg" alt="奈良若者サポートステーション" width="127" height="55"><br>
+       <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img src="./image/banner_supportstation.jpg" alt="奈良若者サポートステーション" width="127" height="55"><br>
 
        奈良 若者サポートステーション</a></li>
 
@@ -323,7 +323,7 @@
 
 
 
-       <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="image_files/banner_miminashichiiki.jpg" alt="みみなし地域学級" width="94" height="106"><br>
+       <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./image/banner_miminashichiiki.jpg" alt="みみなし地域学級" width="94" height="106"><br>
 
      みみなし地域学級</a></li>
 
@@ -331,7 +331,7 @@
 
       <li>
 
-<a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html" target="_blank"><img src="image_files/banner_kyoudou.gif" alt="橿原協働のひろば" width="161" height="69"><br>橿原市　協働のひろば</a></li>
+<a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html" target="_blank"><img src="./image/banner_kyoudou.gif" alt="橿原協働のひろば" width="161" height="69"><br>橿原市　協働のひろば</a></li>
 
 
 
@@ -385,14 +385,14 @@
 
     </ul>
 
-    <p><img src="image_files/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" width="256" height="60"> </p>
+    <p><img src="./image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" width="256" height="60"> </p>
 
 
 
     </div>
 
   </div>
-<img src="image_files/001.jpg" alt="奈良若者サポートステーション" width="1" height="1">
+<img src="./image/001.jpg" alt="奈良若者サポートステーション" width="1" height="1">
 
 
 
