--- a/Config/template/body.erb
+++ b/Config/template/body.erb
@@ -45,7 +45,7 @@
               ト脱出サークル</a></li>
         </ul>
         <!-- 原稿-->
-        <%= @page.get_Manuscript() %>
+        <%= @page.get_manuscript() %>
         <div id="index_bottom_news">
           <div id="index_news">
             <p><a href="http://cscnara.ksaka.net/circle.html">ニート脱出サークル説明会開催</a></p>
