--- a/Config/template/header.erb
+++ b/Config/template/header.erb
@@ -8,7 +8,7 @@
   <meta name="keywords" content="<%= @keyword %> ">
   <meta name="description" content="<%= @page.get_description() %>">
 
-  <title>="<%= @page.get_title() %>" </title>
+  <title><%= @page.get_title() %></title>
         <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
 		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
         <link href="./../image/common.css" rel="stylesheet" type="text/css">
