--- a/Config/template/kazokukai/Manuscript.html
+++ b/Config/template/kazokukai/Manuscript.html
@@ -1,5 +1,5 @@
-<img src="images/honninnokai.jpg" alt="ひきこもり 居場所 ">
+<img src="./../images/honninnokai.jpg" alt="ひきこもり 居場所 ">
 <div class="imgcenter">
-<a href="kazokukai.html" target="_parent"><img src="images/kazokunokaibanner.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
+<a href="./../kazokukai/index.html" target="_parent"><img src="./../kazokunokaibanner2.jpg" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
 </div>
   <div id="foot_link">
