--- a/Config/template/honninkai/Manuscript.html
+++ b/Config/template/honninkai/Manuscript.html
@@ -1,5 +1,5 @@
-<img src="images/kazokunokai.jpg" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
+<img src="./../images/kazokunokai.jpg" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
 
-</div>
+
 <div class="imgcenter">
-<a href="honninkai.html" target="_parent"><img src="images/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー">
+<a href="honninkai.html" target="_parent"><img src="./../images/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー">
