--- a/Config/template/honninkai/Manuscript.html
+++ b/Config/template/honninkai/Manuscript.html
@@ -2,4 +2,4 @@
 
 
 <div class="imgcenter">
-<a href="honninkai.html" target="_parent"><img src="./../images/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー">
+<a href="./index.html" target="_parent"><img src="./../images/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー">
