--- a/Config/template/kazokukai/Manuscript.html
+++ b/Config/template/kazokukai/Manuscript.html
@@ -1,7 +1,7 @@
 <body>
   <div class="top_message" id="con_wrapper">
     <h4 class="letter_title">■ニート・ひきこもりの方の就職を応援します！</h4>
-<img src="./../../image/1_imege.png" alt="平成30年ひきこもりセミナー" width="600" height="800">
+<img src="./../../image/2_image" alt="平成30年ひきこもりセミナー" width="600" height="800">
     <p></p>
     <br>
     <p>現在、奈良県委託事業として、ひきこもり当事者への居場所提供型支援事業や若年就職困難者職場実習等サポート事業を実施しています。奈良県
