--- a/Config/template/body.erb
+++ b/Config/template/body.erb
@@ -62,7 +62,7 @@
 
                   src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
             </div>
-
+            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
             <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
             <br>
             <p></p>
@@ -72,11 +72,9 @@
 
                   alt=""></a></p>
           </div>
-          <div class="bannerbox">
             <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../../image/menu_6.PNG"
 
                   alt=""></a></p>
-          </div>
           <div id="whatsnew">
             <ul>
               <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
