--- a/Config/template/honninkai/Manuscript.html
+++ b/Config/template/honninkai/Manuscript.html
@@ -1,5 +1,5 @@
-<img src="./../image/3_imege_2.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
-
+<!--<img src="./../image/3_imege_2.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
+-->
 
 <div class="imgcenter">
 <a href="./index.html" target="_parent"><img src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー">
