--- a/Config/template/chukansyurou/index.html
+++ b/Config/template/chukansyurou/index.html
@@ -1,5 +1,8 @@
-<img src="./../image/1_imege.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
-
-
-<div class="imgcenter">
-<a href="./index.html" target="_parent"><img src="./../image/1_imege.png" alt="平成30年ひきこもりセミナー">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
+  <body><img src="./../image/1_imege.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族" style="width: 700px; height: 991px;">
+  </body>
+</html>
