--- a/Config/template/index/header.html
+++ b/Config/template/index/header.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html><head>
   <meta charset = "utf-8">
   <meta name="name" content="content">
@@ -9,10 +9,10 @@
   <meta name="description" content="<%= @page.get_description() %>">
 
   <title><%= @page.get_title() %></title>
-        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
-		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
-        <link href="./../image/common.css" rel="stylesheet" type="text/css">
-		        <link rel="shortcut icon" href="./../images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
+  <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
+  <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="./../images/favicon.ico">
 
   <script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
 
@@ -28,22 +28,22 @@
 
 </script>
 
-    <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
+  top: 18px !important;
+  left: 50% !important;
+  margin-left: -100px !important;
+  width: 200px !important;
+  border: 2px rgba(255,255,255,.38) solid !important;
+  border-radius: 4px !important;
 }
 
 .en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
+  margin-left: 0px !important;
 }
 </style>
 
 
-  <title><%= @config.home_title %></title>
+<title><%= @config.home_title %></title>
 
 </head>
