--- a/Config/template/admission/index.html
+++ b/Config/template/admission/index.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
   <body>
     <h4 class="letter_title">ご支援・ご入会のご案内</h4>
     <p>特定非営利活動（ＮＰＯ）法人は常に事業による自活努力を行うことが原則であり、私どもも収益事業の確立を模索しております。
@@ -90,4 +95,4 @@
       </tbody>
     </table>
   </body>
-
+</html>
