--- a/Config/template/honninkai/index.html
+++ b/Config/template/honninkai/index.html
@@ -1,5 +1,11 @@
 <!--<img src="./../image/3_imege_2.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
--->
-
-<div class="imgcenter">
-<a href="./index.html" target="_parent"><img src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー">
+--><html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div class="imgcenter"> <a href="./index.html" target="_parent"><img src="./../image/3_imege_2.png"
+          alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;"> </a></div>
+  </body>
+</html>
