--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
   <body class="page">
     <div id="wrapper">
       <div id="header">
@@ -8,12 +13,10 @@
               width="452"></a> </h1>
         <div id="right">
           <ul>
-            <li id="index"><%= @config.top_home_page() %></li>
+            <li id="index">&lt;%= @config.top_home_page() %&gt;</li>
             <li id="contact"><a href="./../contact/index.html"></a><br>
             </li>
-            <li id="menu_sitemap"><a href="./../sitemap/index.html"
-
-                target="_parent"></a><br>
+            <li id="menu_sitemap"><a href="./../sitemap/index.html" target="_parent"></a><br>
             </li>
           </ul>
           <p>本部：橿原新ノ口校<br>
@@ -28,9 +31,8 @@
           <ul id="sub_menu">
             <li id="outline"><a href="./../outline/index.html" target="_parent">団
                 体概要</a></li>
-            <li id="admission"><a href="./../admission/index.html"
-
-                target="_parent">ご支援・入会のご案内</a></li>
+            <li id="admission"><a href="./../admission/index.html" target="_parent">ご
+                支援・入会のご案内</a></li>
             <li id="link"><a href="./../link/index.html">リンク集</a></li>
           </ul>
           <ul id="glo_menu">
@@ -38,13 +40,12 @@
                 業訓練・CSスクール</a></li>
             <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ
                 ソコンなら青年おたすけ隊</a></li>
-            <li id="counseling"><a href="./../counseling/index.html"
-
-                target="_parent">相談・カウンセリング</a></li>
+            <li id="counseling"><a href="./../counseling/index.html" target="_parent">相
+                談・カウンセリング</a></li>
             <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
                 ト脱出サークル</a></li>
           </ul>
-          <!-- 原稿--> <%= @page.get_manuscript() %>
+          <!-- 原稿--> &lt;%= @page.get_index() %&gt;
           <!-- 原稿-->
           <div id="index_bottom_news">
             <div id="index_news">
@@ -55,34 +56,30 @@
         <div id="column_right">
           <!--ここから--> <br>
           <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html"
+            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
 
-                target="_parent"><img src="./../../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-              <a href="./../honninkai/index.html" target="_parent"><img
+                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><br>
+              </a></div>
+            <div> <a href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"
 
-                  src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-            </div>
-            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
-            <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
-            <br>
-            <p></p>
-          </div>
-          <div class="bannerbox">
-            <p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./../../image/menu_5.PNG"
+                  alt="平成30年ひきこもりセミナー"><!--家族の会--></a> </div>
+            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img
 
-                  alt=""></a></p>
-          </div>
-            <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../../image/menu_6.PNG"
+                  src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>
+            <a href="http://cscnara.blog.jp/" target="_top"><img src="./../image/menu_5.PNG"
 
-                  alt=""></a></p>
-          <div id="whatsnew">
+                alt="ニート・ひきこもりから脱出しよう！！"></a></div>
+          <div class="bannerbox"> </div>
+          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../image/menu_6.PNG"
+
+                alt="わーく・ワク"></a></p>
+          
             <ul>
               <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
                   職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>
                   15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>
                   参加者募集中</a></li>
-              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク
-                  ル』<br>
+              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク ル』<br>
                   ニート・ひきこもりからの自立支援<br>
                   参加者募集中</a></li>
               <li><a href="./../Questionnaire/index.html" target="_blank">貴
@@ -90,47 +87,47 @@
             </ul>
           </div>
           <ul id="csschool">
-            <li id="title2"><img src="./../../image/side_title.jpg" alt="CSスクール" height="109"
+            <li id="title2"><img src="./../image/side_title.jpg" alt="CSスクール" height="109"
 
                 width="240"></li>
-            <li><a href="./../school/index.html" target="_parent">本
-                部・橿原新ノ口校</a></li>
+            <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
           </ul>
           <div>
             <p>パソコンのトラブル<br>
               相談はこちらへ</p>
             <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
 
-                src="./../../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>
+                src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>
         </div>
         <!--ここまで--> </div>
       <div id="foot_link">
         <ul>
           <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
 
-                src="./../../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
+                src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
 
                 width="129"><br>
               奈良県青少年・生涯学習課</a></li>
+          
           <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
 
-                src="./../../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
+                src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
 
                 height="55" width="127"><br>
               奈良 若者サポートステーション</a></li>
-          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../../image/banner_miminashichiiki.jpg"
+          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
 
                 alt="みみなし地域学級" height="106" width="94"><br>
               みみなし地域学級</a></li>
           <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
 
-              target="_blank"><img src="./../../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+              target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
 
                 height="69" width="161"><br>
               橿原市　協働のひろば</a></li>
         </ul>
       </div>
-    </div>
-    <div id="foot_wrapper">
-    </div>
+
+    <div id="foot_wrapper"> </div>
   </body>
+</html>
