--- a/Config/template/index/index.html
+++ b/Config/template/index/index.html
@@ -1,7 +1,10 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  </head>
   <body>
     <div class="top_message" id="con_wrapper">
       <h4 class="letter_title">■ニート・ひきこもりの方の就職を応援します！</h4>
-
       <p></p>
       <br>
       <p>現在、奈良県委託事業として、ひきこもり当事者への居場所提供型支援事業や若年就職困難者職場実習等サポート事業を実施しています。奈良県
@@ -24,3 +27,4 @@
           づきはこちらから</a></p>
     </div>
   </body>
+</html>
