--- a/Config/template/school/index.html
+++ b/Config/template/school/index.html
@@ -1,32 +1,34 @@
-<div id="con_wrapper">
-
-  <h4 class="letter_title">職業訓練　CSスクール</h4>
-
-<p>NPO法人キャリアサポートセンター奈良　CSスクールでは、求職中の方へ次のお仕事に繋がるスキル習得のお手伝いをしています。<br>
-  当校では、パソコンのスキルの習得はもちろんですが、履歴書の書き方・面接の受け方から、今まで送ってこられたキャリアをどのように生かすか、あなたが今後どのような道を進みたいのかまでを真摯に相談していただる多彩な講師とキャリアカウンセラーの資格を持つアドバイザーが在籍しています。<br>
-また、受講生の方々との集団生活を送るなかで、求職中に起こる様々な悩みを打ち明けられる場、自分とは違う考えの人との交流を持てる場としてもご活用していただければ、と考えています。</p>
-<p>職業訓練の概要はこちらをご覧ください</p>
-<p><a href="http://www.mhlw.go.jp/seisakunitsuite/bunya/koyou_roudou/shokugyounouryoku/" target="_blank">独立行政法人　高齢・生涯・求職者雇用支援機構</a></p>
-<p><a href="http://www3.jeed.or.jp/nara/poly/" target="_blank">ポリテクセンター奈良</a></p>
-<p><a href="http://www.mhlw.go.jp/bunya/nouryoku/training_worker.html" target="_blank">厚生労働省　職業訓練</a></p>
-
-<h4 class="letter_title" id="ninokuchi_cs">本部・橿原新ノ口校</h4>
-  <p>〒634-0007<br>
-  奈良県橿原市葛本町307番地の12　アメニティ24-20A（2階）<br>
-  TEL ＆ FAX：（0744）29-6776<br>
-  近鉄橿原線新ノ口駅から徒歩5分</p>
-  <p><img src="images/ninokuchi_exterior.jpg" alt="新ノ口校外観" width="200" height="153"><img src="images/ninokuchi_interior.jpg" alt="新ノ口校教室風景" width="194" height="153"></p>
-  <p>地図</p>
-  <iframe src="http://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18&amp;output=embed" scrolling="no" width="500" height="350" frameborder="0"></iframe><br><small><a href="http://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
-<h4 class="letter_title" id="daianji_cs">奈良大安寺校</h4>
-  <p>〒630－8141<br>
-  奈良県奈良市南京終町3丁目1528-6　奈良OAシステムビル2階<br>
-  TEL ＆ FAX：（0742）93-8066<br>
-  奈良交通バス・JR奈良駅、近鉄奈良駅より「シャープ前・杏南町・杏中町・白土町」行き乗車「大安寺」バス停下車　徒歩約5分<br>
-  大安寺バス停より南方の方は「南京終町」バス停下車　徒歩4分</p>
-  <p><img src="images/daianji_exterior.jpg" alt="大安寺校外観" width="243" height="150"><img src="images/daianji_interior.jpg" alt="大安寺校教室風景" width="200" height="150"></p>
-  <p>地図</p>
-<iframe scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA3%E4%B8%81%E7%9B%AE1528-6&amp;aq=&amp;sll=34.515344,135.791616&amp;sspn=0.01197,0.022552&amp;brcurrent=3,0x60013a18306fa581:0x742e8285d5e2d74e,0,0x60013a18306fa581:0x24b9b30f4021c51e&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA%EF%BC%93%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%95%EF%BC%92%EF%BC%98%E2%88%92%EF%BC%96&amp;ll=34.66837,135.819082&amp;spn=0.006177,0.010729&amp;z=16&amp;output=embed" width="500" height="350" frameborder="0"></iframe><br><small><a href="http://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA3%E4%B8%81%E7%9B%AE1528-6&amp;aq=&amp;sll=34.515344,135.791616&amp;sspn=0.01197,0.022552&amp;brcurrent=3,0x60013a18306fa581:0x742e8285d5e2d74e,0,0x60013a18306fa581:0x24b9b30f4021c51e&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA%EF%BC%93%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%95%EF%BC%92%EF%BC%98%E2%88%92%EF%BC%96&amp;ll=34.66837,135.819082&amp;spn=0.006177,0.010729&amp;z=16" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
-
-
-</div>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div id="con_wrapper">
+      <h4 class="letter_title">職業訓練　CSスクール</h4>
+      <p>NPO法人キャリアサポートセンター奈良　CSスクールでは、求職中の方へ次のお仕事に繋がるスキル習得のお手伝いをしています。<br>
+        当校では、パソコンのスキルの習得はもちろんですが、履歴書の書き方・面接の受け方から、今まで送ってこられたキャリアをどのように生かすか、あなたが今
+        後どのような道を進みたいのかまでを真摯に相談していただる多彩な講師とキャリアカウンセラーの資格を持つアドバイザーが在籍しています。<br>
+        また、受講生の方々との集団生活を送るなかで、求職中に起こる様々な悩みを打ち明けられる場、自分とは違う考えの人との交流を持てる場としてもご活用して
+        いただければ、と考えています。</p>
+      <p>職業訓練の概要はこちらをご覧ください</p>
+      <p><a href="http://www.mhlw.go.jp/seisakunitsuite/bunya/koyou_roudou/shokugyounouryoku/"
+          target="_blank">独立行政法人　高齢・生涯・求職者雇用支援機構</a></p>
+      <p><a href="http://www3.jeed.or.jp/nara/poly/" target="_blank">ポリテクセンター奈良</a></p>
+      <p><a href="http://www.mhlw.go.jp/bunya/nouryoku/training_worker.html" target="_blank">厚
+          生労働省　職業訓練</a></p>
+      <h4 class="letter_title" id="ninokuchi_cs">本部・橿原新ノ口校</h4>
+      <p>〒634-0007<br>
+        奈良県橿原市葛本町307番地の12　アメニティ24-20A（2階）<br>
+        TEL ＆ FAX：（0744）29-6776<br>
+        近鉄橿原線新ノ口駅から徒歩5分</p>
+      <p><a href="../image/ninokuchi_exterior.jpg"><img src="images/ninokuchi_exterior.jpg"
+            alt="新ノ口校外観" height="153" width="200"></a><a href="../image/ninokuchi_interior.jpg"><img
+            src="images/ninokuchi_interior.jpg" alt="新ノ口校教室風景" height="153" width="194"></a></p>
+      <p>地図</p>
+      <iframe src="http://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18&amp;output=embed"
+        scrolling="no" height="350" frameborder="0" width="500"></iframe><br>
+      <small><a href="http://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18"
+          style="color:#0000FF;text-align:left">大きな地図で見る</a></small> </div>
+  </body>
+</html>
