--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -56,78 +56,89 @@
         <div id="column_right">
           <!--ここから--> <br>
           <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
+            <div id="banner_hikikomori"> <a href="./../honninkai/index.html" target="_parent"><img
 
-                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><br>
+                  src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a><a href="./../chukansyurou/index.html"
+
+                target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等"></a><a
+
+                href="http://cscnara.blog.jp/" target="_top"><img src="./../image/menu_5.PNG"
+
+                  alt="ニート・ひきこもりから脱出しよう！！"></a><a href="http://cspgschool.blog.jp/"
+
+                target="_top"><img src="./../image/menu_6.PNG" alt="わーく・ワク"></a><a
+
+                href="./../kazokukai/index.html" target="_parent"><img src="../image/menu_1.PNG"
+
+                  alt="平成30年ひきこもりセミナー"><br>
               </a></div>
-            <div> <a href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"
-
-                  alt="平成30年ひきこもりセミナー"><!--家族の会--></a> </div>
-            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img
-
-                  src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>
-            <a href="http://cscnara.blog.jp/" target="_top"><img src="./../image/menu_5.PNG"
-
-                alt="ニート・ひきこもりから脱出しよう！！"></a></div>
-          <div class="bannerbox"> </div>
-          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../image/menu_6.PNG"
-
-                alt="わーく・ワク"></a></p>
-          
-            <ul>
-              <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
-                  職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>
-                  15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>
-                  参加者募集中</a></li>
-              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク ル』<br>
-                  ニート・ひきこもりからの自立支援<br>
-                  参加者募集中</a></li>
-              <li><a href="./../Questionnaire/index.html" target="_blank">貴
-                  社が求める人材に関するアンケートお願い</a></li>
-            </ul>
+            <div> <a href="./../honninkai/index.html" target="_parent"><!--家族の会--></a>
+            </div>
+            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><!--中間就労--></a></p>
           </div>
-          <ul id="csschool">
-            <li id="title2"><img src="./../image/side_title.jpg" alt="CSスクール" height="109"
+          <div class="bannerbox"> </div>
+          <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p>
+          <ul>
+            <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
+                職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>
+                15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>
+                参加者募集中</a></li>
+            <li><a href="./../circle/index.html">H29『子ども・若者支援サーク ル』<br>
+                ニート・ひきこもりからの自立支援<br>
+                参加者募集中</a></li>
+            <li><a href="./../Questionnaire/index.html" target="_blank">貴
+                社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
 
-                width="240"></li>
-            <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
+                  src="./../image/side_title.jpg" alt="CSスクール" height="109" width="240"></a>
+              <ul id="csschool">
+                <a href="./../Questionnaire/index.html" target="_blank"> </a>
+                <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
+              </ul>
+              パ ソコンのトラブル<br>
+              相談はこちらへ<a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
+
+                  src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a></li>
           </ul>
-          <div>
-            <p>パソコンのトラブル<br>
-              相談はこちらへ</p>
-            <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
-
-                src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>
         </div>
-        <!--ここまで--> </div>
-      <div id="foot_link">
-        <ul>
-          <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
-
-                src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
-
-                width="129"><br>
-              奈良県青少年・生涯学習課</a></li>
-          
-          <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
-
-                src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
-
-                height="55" width="127"><br>
-              奈良 若者サポートステーション</a></li>
-          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
-
-                alt="みみなし地域学級" height="106" width="94"><br>
-              みみなし地域学級</a></li>
-          <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
-
-              target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
-
-                height="69" width="161"><br>
-              橿原市　協働のひろば</a></li>
-        </ul>
+        <div>
+          <!--ここまで--> </div>
       </div>
+    </div>
+    <div id="foot_link">
+      <ul>
+        <li>&nbsp;</li>
+      </ul>
+      <a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
 
+          src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
+
+          width="129"></a></div>
+    <div><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">奈
+        良県青少年</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">・
+        生涯学習課</a>
+      <ul>
+        <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
+
+              src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション" height="55"
+
+              width="127"><br>
+            奈良 若者サポートステーション</a></li>
+        <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
+
+              alt="みみなし地域学級" height="106" width="94"><br>
+            みみなし地域学級</a></li>
+        <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+
+            target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+
+              height="69" width="161"><br>
+            橿原市　協働のひろば</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm"
+
+            target="_blank"></a></li>
+      </ul>
+      <ul>
+      </ul>
+    </div>
     <div id="foot_wrapper"> </div>
   </body>
 </html>
