--- a/Config/template/honninkai/index.html
+++ b/Config/template/honninkai/index.html
@@ -5,7 +5,8 @@
     <link href="./../image/common.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="imgcenter"> <a href="./index.html" target="_parent"><img src="./../image/3_imege_2.png"
-          alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;"> </a></div>
+    <div class="imgcenter"> <a href="../image/3_image_2.pdf" target="_parent"><img
+          src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;">
+      </a></div>
   </body>
 </html>
