--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -43,7 +43,25 @@
             <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
                 ト脱出サークル</a></li>
           </ul>
-          <!-- 原稿--> &lt;%= @page.get_index() %&gt;
+          <table style="width: 652px; height: 106px;" border="0">
+            <tbody>
+              <tr>
+                <td><b><a href="./../school/index.html">職業訓練<br>
+                      CSスクール</a></b></td>
+                <td><b><a href="./../pasokonn/index.html">パソコンなら<br>
+                      青年お助けたい</a></b></td>
+                <td><b><a href="./../counseling/index.html">相談<br>
+                      カウンセリング</a></b></td>
+                <td><b><a href="./../circle/index.html">自立支援<br>
+                      サークル</a></b></td>
+                <td><b><a href="./../outline/index.html">団体概要</a></b></td>
+                <td><b><a href="./../admission/index.html">ご支援<br>
+                      入会のご案内</a></b></td>
+                <td><b><a href="./../link/index.html">リンク集</a></b></td>
+              </tr>
+            </tbody>
+          </table>
+          &nbsp;<!-- 原稿--> &lt;%= @page.get_index() %&gt;
           <!-- 原稿-->
           <div id="index_bottom_news">
             <div id="index_news">
