--- a/Config/template/index/header.html
+++ b/Config/template/index/header.html
@@ -41,6 +41,9 @@
 .en-markup-crop-options div div:first-of-type {
   margin-left: 0px !important;
 }
+
+a:focus{ font-size: 30px;
+          color: red; }
 </style>
 
 
