--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -46,18 +46,25 @@
           <table style="width: 652px; height: 106px;" border="0">
             <tbody>
               <tr>
-                <td><b><a href="./../school/index.html">職業訓練<br>
+                <td style="background-color: #ff9966;"><b><a href="./../school/index.html">職
+                      業訓練<br>
                       CSスクール</a></b></td>
-                <td><b><a href="./../pasokonn/index.html">パソコンなら<br>
+                <td style="background-color: #ff9966;"><b><a href="./../pasokonn/index.html">パ
+                      ソコンなら<br>
                       青年お助けたい</a></b></td>
-                <td><b><a href="./../counseling/index.html">相談<br>
+                <td style="background-color: #ff9966;"><b><a href="./../counseling/index.html">相
+                      談<br>
                       カウンセリング</a></b></td>
-                <td><b><a href="./../circle/index.html">自立支援<br>
+                <td style="background-color: #ff9966;"><b><a href="./../circle/index.html">自
+                      立支援<br>
                       サークル</a></b></td>
-                <td><b><a href="./../outline/index.html">団体概要</a></b></td>
-                <td><b><a href="./../admission/index.html">ご支援<br>
+                <td style="background-color: #ff9966;"><b><a href="./../outline/index.html">団
+                      体概要</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../admission/index.html">ご
+                      支援<br>
                       入会のご案内</a></b></td>
-                <td><b><a href="./../link/index.html">リンク集</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../link/index.html">リ
+                      ンク集</a></b></td>
               </tr>
             </tbody>
           </table>
