--- a/Config/template/index/header.html
+++ b/Config/template/index/header.html
@@ -42,7 +42,7 @@
   margin-left: 0px !important;
 }
 
-a:focus{ font-size: 30px;
+a:hover{ font-size: 30px;
           color: red; }
 </style>
 
@@ -50,3 +50,6 @@ a:focus{ font-size: 30px;
 <title><%= @config.home_title %></title>
 
 </head>
+<body>
+</body>
+</html>
