--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -6,9 +6,11 @@
   <body class="page">
     <div id="wrapper">
       <div id="header">
-        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
-              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
-              width="452"></a> </h1>
+        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
+
+              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452"
+
+              height="112"></a> </h1>
         <div id="right">
           <ul>
             <li id="index">&lt;%= @config.top_home_page() %&gt;</li>
@@ -43,28 +45,36 @@
             <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
                 ト脱出サークル</a></li>
           </ul>
-          <table style="width: 652px; height: 106px;" border="0">
+          <table style="width: 631px; height: 106px;" border="0">
             <tbody>
               <tr>
-                <td style="background-color: #ff9966;"><b><a href="./../school/index.html">職
-                      業訓練<br>
-                      CSスクール</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../pasokonn/index.html">パ
-                      ソコンなら<br>
-                      青年お助けたい</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../counseling/index.html">相
-                      談<br>
-                      カウンセリング</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../circle/index.html">自
-                      立支援<br>
-                      サークル</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../outline/index.html">団
-                      体概要</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../admission/index.html">ご
-                      支援<br>
-                      入会のご案内</a></b></td>
-                <td style="background-color: #ff9966;"><b><a href="./../link/index.html">リ
-                      ンク集</a></b></td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_1.PNG"
+
+                    alt="職業訓練CSスクール" style="width: 110px; height: 70px;"></td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_2.PNG"
+
+                    alt="パソコンなら青年お助け隊" style="width: 111px; height: 70px;"><br>
+                </td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_3.PNG"
+
+                    alt="相談カウンセリング" style="width: 110px; height: 70px;"><br>
+                </td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_4.PNG"
+
+                    alt="自立支援サークル" style="width: 110px; height: 70px;"><br>
+                </td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_5.PNG"
+
+                    alt="団体概要" style="width: 110px; height: 70px;"><br>
+                </td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_6.PNG"
+
+                    alt="ご支援・入会のご案内" style="width: 110px; height: 70px;"><br>
+                </td>
+                <td style="background-color: white;"><img src="../image/yoko_ue_7.PNG"
+
+                    alt="リンク集" style="width: 110px; height: 70px;><br>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -72,21 +82,31 @@
           <!-- 原稿-->
           <div id="index_bottom_news">
             <div id="index_news">
-              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a href="./../honninkai/index.html"
-                  target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a></p>
+              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a
+
+                  href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"
+
+                    alt="平成30年ひきこもりセミナー"></a></p>
             </div>
           </div>
         </div>
         <div id="column_right">
           <!--ここから--> <br>
           <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
-                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"></a><a href="./../honninkai/index.html"
-                target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a><a
-                href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG"
-                  alt="平成30年若年就職困難者職場実習等"></a><a href="http://cscnara.blog.jp/"
-                target="_top"><img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"></a><a
-                href="http://workwaku.ksaka.net/" target="_top"><img src="./../image/menu_6.PNG"
+            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
+
+                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"></a><a href="./../honninkai/index.html"
+
+                target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a><a
+
+                href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG"
+
+                  alt="平成30年若年就職困難者職場実習等"></a><a href="http://cscnara.blog.jp/"
+
+                target="_top"><img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"></a><a
+
+                href="http://workwaku.ksaka.net/" target="_top"><img src="./../image/menu_6.PNG"
+
                   alt="わーく・ワク"></a><a href="./../kazokukai/index.html" target="_parent"></a></div>
           </div>
           <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p>
@@ -99,14 +119,16 @@
                 ニート・ひきこもりからの自立支援<br>
                 参加者募集中</a></li>
             <li><a href="./../Questionnaire/index.html" target="_blank">貴
-                社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
-                  src="./../image/side_title.jpg" alt="CSスクール" height="109" width="240"></a>
+                社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
+
+                  src="./../image/side_title.jpg" alt="CSスクール" width="240" height="109"></a>
               <ul id="csschool">
                 <a href="./../Questionnaire/index.html" target="_blank"> </a>
                 <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
               </ul>
               パ ソコンのトラブル<br>
-              相談はこちらへ<a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
+              相談はこちらへ<a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
+
                   src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a></li>
           </ul>
         </div>
@@ -119,26 +141,35 @@
       <table style="width: 1037px; height: 137px;" border="0">
         <tbody>
           <tr>
-            <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
-                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
-                  width="129"></a></td>
-            <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
-                  src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
-                  height="55" width="127"></a></td>
-            <td><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
-                  alt="みみなし地域学級" height="106" width="94"></a></td>
-            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
-                target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
-                  height="69" width="161"></a></td>
+            <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
+
+                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129"
+
+                  height="42"></a></td>
+            <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
+
+                  src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
+
+                  width="127" height="55"></a></td>
+            <td><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
+
+                  alt="みみなし地域学級" width="94" height="106"></a></td>
+            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+
+                target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+
+                  width="161" height="69"></a></td>
           </tr>
           <tr>
             <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">
-                奈良県青少年</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm"
+                奈良県青少年</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm"
+
                 target="_blank">・ 生涯学習課</a></td>
             <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank">奈
                 良若者サポートステーション</a></td>
             <td><a href="http://miminashi.iinaa.net/" target="_blank">みみなし地域 学級</a></td>
-            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+
                 target="_blank">橿原市　協働のひろば</a></td>
           </tr>
         </tbody>
