--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -48,13 +48,27 @@
           <table style="width: 631px; height: 106px;" border="0">
             <tbody>
               <tr>
-                <td style="background-color: white;"><img src="../image/yoko_ue_1.PNG"
+                <td style="background-color: white;">
 
-                    alt="職業訓練CSスクール" style="width: 110px; height: 70px;"></td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_2.PNG"
+<div class="demo04">
+ 	<a href="#">
+ 		<img src="../image/yoko_ue_1.PNG" width="200" height="60" alt="サンプル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'" alt="職業訓練CSスクール" style="width: 110px; height: 70px;">
+ 	</a>
+ </div>
+ <br>
+                    </td>
+                <td style="background-color: white;">
 
-                    alt="パソコンなら青年お助け隊" style="width: 111px; height: 70px;"><br>
+                  <div class="demo04">
+                   	<a href="#">
+                   		<img src="../image/yoko_ue_2.PNG" width="200" height="60" alt="サンプル" onmouseover="this.src='../image/yoko_sita_2.PNG'" onmouseout="this.src='../image/yoko_ue_2.PNG'" alt="パソコンなら青年お助け隊" style="width: 110px; height: 70px;">
+                   	</a>
+                   </div> <br>
+
+
                 </td>
+
+                
                 <td style="background-color: white;"><img src="../image/yoko_ue_3.PNG"
 
                     alt="相談カウンセリング" style="width: 110px; height: 70px;"><br>
