--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -8,9 +8,9 @@
       <div id="header">
         <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
 
-              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452"
+              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
 
-              height="112"></a> </h1>
+              width="452"></a> </h1>
         <div id="right">
           <ul>
             <li id="index">&lt;%= @config.top_home_page() %&gt;</li>
@@ -45,50 +45,28 @@
             <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
                 ト脱出サークル</a></li>
           </ul>
-          <table style="width: 631px; height: 106px;" border="0">
+          <table style="width: 652px; height: 106px;" border="0">
             <tbody>
               <tr>
-                <td style="background-color: white;">
-
-<div class="demo04">
- 	<a href="#">
- 		<img src="../image/yoko_ue_1.PNG" width="200" height="60" alt="サンプル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'" alt="職業訓練CSスクール" style="width: 110px; height: 70px;">
- 	</a>
- </div>
- <br>
-                    </td>
-                <td style="background-color: white;">
-
-                  <div class="demo04">
-                   	<a href="#">
-                   		<img src="../image/yoko_ue_2.PNG" width="200" height="60" alt="サンプル" onmouseover="this.src='../image/yoko_sita_2.PNG'" onmouseout="this.src='../image/yoko_ue_2.PNG'" alt="パソコンなら青年お助け隊" style="width: 110px; height: 70px;">
-                   	</a>
-                   </div> <br>
-
-
-                </td>
-
-                
-                <td style="background-color: white;"><img src="../image/yoko_ue_3.PNG"
-
-                    alt="相談カウンセリング" style="width: 110px; height: 70px;"><br>
-                </td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_4.PNG"
-
-                    alt="自立支援サークル" style="width: 110px; height: 70px;"><br>
-                </td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_5.PNG"
-
-                    alt="団体概要" style="width: 110px; height: 70px;"><br>
-                </td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_6.PNG"
-
-                    alt="ご支援・入会のご案内" style="width: 110px; height: 70px;"><br>
-                </td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_7.PNG"
-
-                    alt="リンク集" style="width: 110px; height: 70px;><br>
-                </td>
+                <td style="background-color: #ff9966;"><b><a href="./../school/index.html">職
+                      業訓練<br>
+                      CSスクール</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../pasokonn/index.html">パ
+                      ソコンなら<br>
+                      青年お助けたい</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../counseling/index.html">相
+                      談<br>
+                      カウンセリング</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../circle/index.html">自
+                      立支援<br>
+                      サークル</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../outline/index.html">団
+                      体概要</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../admission/index.html">ご
+                      支援<br>
+                      入会のご案内</a></b></td>
+                <td style="background-color: #ff9966;"><b><a href="./../link/index.html">リ
+                      ンク集</a></b></td>
               </tr>
             </tbody>
           </table>
@@ -96,11 +74,9 @@
           <!-- 原稿-->
           <div id="index_bottom_news">
             <div id="index_news">
-              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a
+              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a href="./../honninkai/index.html"
 
-                  href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"
-
-                    alt="平成30年ひきこもりセミナー"></a></p>
+                  target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a></p>
             </div>
           </div>
         </div>
@@ -135,7 +111,7 @@
             <li><a href="./../Questionnaire/index.html" target="_blank">貴
                 社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
 
-                  src="./../image/side_title.jpg" alt="CSスクール" width="240" height="109"></a>
+                  src="./../image/side_title.jpg" alt="CSスクール" height="109" width="240"></a>
               <ul id="csschool">
                 <a href="./../Questionnaire/index.html" target="_blank"> </a>
                 <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
@@ -157,22 +133,22 @@
           <tr>
             <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
 
-                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129"
+                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
 
-                  height="42"></a></td>
+                  width="129"></a></td>
             <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
 
                   src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
 
-                  width="127" height="55"></a></td>
+                  height="55" width="127"></a></td>
             <td><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
 
-                  alt="みみなし地域学級" width="94" height="106"></a></td>
+                  alt="みみなし地域学級" height="106" width="94"></a></td>
             <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
 
                 target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
 
-                  width="161" height="69"></a></td>
+                  height="69" width="161"></a></td>
           </tr>
           <tr>
             <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">
