画像貼り付け

--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -7,8 +7,10 @@
     <div id="wrapper">
       <!-- ヘッダ部分 -->
       <div id="header">
-        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
-              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452"
+        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
+
+              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" width="452"
+
               height="112"></a> </h1>
         <div id="right">
           <ul>
@@ -47,24 +49,31 @@
           <table style="width: 652px; height: 106px;" border="0">
             <tbody>
               <tr>
-                <td style="background-color: white;"><b><a href="./../school/index.html"><img
+                <td><b><a href="./../school/index.html"><img
+
                         src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル"><br>
                     </a></b></td>
-                <td style="background-color: white;"><b><a href="./../pasokonn/index.html"><img
+                <td><b><a href="./../pasokonn/index.html"><img
+
                         src="../image/yoko_ue_2.PNG" alt="パソコンなら青年お助け隊"><br>
                     </a></b></td>
-                <td style="background-color: white;"><img src="../image/yoko_ue_3.PNG"
+                <td><img src="../image/yoko_ue_3.PNG"
+
                     alt="相談カウンセリング"><br>
                 </td>
-                <td style="background-color: white;"><b><a href="./../circle/index.html"><img
+                <td><b><a href="./../circle/index.html"><img
+
                         src="../image/yoko_ue_4.PNG" alt="自立支援サークル"><br>
                     </a></b></td>
-                <td style="background-color: white;"><b><a href="./../outline/index.html"><img
+                <td><b><a href="./../outline/index.html"><img
+
                         src="../image/yoko_ue_5.PNG" alt="団体概要"></a></b></td>
-                <td style="background-color: white;"><b><a href="./../admission/index.html"><img
-                        src="file:///C:/Users/KS24/Desktop/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8/%E7%B1%B3%E5%B7%9D%E3%80%81%E7%B7%A8%E9%9B%86%E4%B8%AD/waku_waku_homepage/Config/template/image/yoko_ue_6.PNG"
+                <td><b><a href="./../admission/index.html"><img
+
+                        src="../image/yoko_ue_6.PNG"
+
                         alt="ご支援入会ご案内"></a></b></td>
-                <td style="background-color: white;"><b><a href="./../link/index.html">リ
+                <td><b><a href="./../link/index.html">リ
                       ンク集</a></b></td>
               </tr>
             </tbody>
@@ -73,7 +82,8 @@
           <!-- 原稿-->
           <div id="index_bottom_news">
             <div id="index_news">
-              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a href="./../honninkai/index.html"
+              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a><a href="./../honninkai/index.html"
+
                   target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a></p>
             </div>
           </div>
@@ -81,13 +91,20 @@
         <div id="column_right">
           <!--ここから--> <br>
           <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
-                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"></a><a href="./../honninkai/index.html"
-                target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a><a
-                href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG"
-                  alt="平成30年若年就職困難者職場実習等"></a><a href="http://cscnara.blog.jp/"
-                target="_top"><img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"></a><a
-                href="http://workwaku.ksaka.net/" target="_top"><img src="./../image/menu_6.PNG"
+            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img
+
+                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"></a><a href="./../honninkai/index.html"
+
+                target="_parent"><img src="../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"></a><a
+
+                href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG"
+
+                  alt="平成30年若年就職困難者職場実習等"></a><a href="http://cscnara.blog.jp/"
+
+                target="_top"><img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"></a><a
+
+                href="http://workwaku.ksaka.net/" target="_top"><img src="./../image/menu_6.PNG"
+
                   alt="わーく・ワク"></a><a href="./../kazokukai/index.html" target="_parent"></a></div>
           </div>
           <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p>
@@ -100,14 +117,16 @@
                 ニート・ひきこもりからの自立支援<br>
                 参加者募集中</a></li>
             <li><a href="./../Questionnaire/index.html" target="_blank">貴
-                社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
+                社が求める人材に関するアンケートお願い</a><a href="./../Questionnaire/index.html" target="_blank"><img
+
                   src="./../image/side_title.jpg" alt="CSスクール" width="240" height="109"></a>
               <ul id="csschool">
                 <a href="./../Questionnaire/index.html" target="_blank"> </a>
                 <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>
               </ul>
               パ ソコンのトラブル<br>
-              相談はこちらへ<a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
+              相談はこちらへ<a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
+
                   src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a></li>
           </ul>
         </div>
@@ -119,26 +138,35 @@
       <table style="width: 1037px; height: 137px;" border="0">
         <tbody>
           <tr>
-            <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
-                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129"
+            <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
+
+                  src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" width="129"
+
                   height="42"></a></td>
-            <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
-                  src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
+            <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
+
+                  src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
+
                   width="127" height="55"></a></td>
-            <td><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
+            <td><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
+
                   alt="みみなし地域学級" width="94" height="106"></a></td>
-            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
-                target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+
+                target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+
                   width="161" height="69"></a></td>
           </tr>
           <tr>
             <td><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">
-                奈良県青少年</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm"
+                奈良県青少年</a><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm"
+
                 target="_blank">・ 生涯学習課</a></td>
             <td><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank">奈
                 良若者サポートステーション</a></td>
             <td><a href="http://miminashi.iinaa.net/" target="_blank">みみなし地域 学級</a></td>
-            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+            <td><a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
+
                 target="_blank">橿原市　協働のひろば</a></td>
           </tr>
         </tbody>
