--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -32,10 +32,15 @@
                     <table style="width: 652px; height: 106px;" border="0">
                         <tbody>
                             <tr>
-                                <td><b><a href="./../school/index.html">
-                                            <img src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル">
-                                            <br>
-                                        </a></b></td>
+                                <td><b>
+                                    
+                                        <div class="demo04">
+                                                <a href="./../school/index.html">
+                                                    <img src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'">
+                                                </a>
+                                            </div>
+
+                                    </b></td>
                                 <td><b><a href="./../pasokonn/index.html">
                                             <img src="../image/yoko_ue_2.PNG" alt="パソコンなら青年お助け隊">
                                             <br>
